<resources>
    <string name="app_name">MyTurn</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_template">TemplateActivity</string>
    <string name="title_activity_plantilla">PlantillaActivity</string>
    <string name="solicitar_turno">Solicitar</string>
    <string name="turno_actual">Turno Actual</string>
    <string name="turnos_en_espera">En espera</string>
    <string name="login_title">My Turn</string>
    <string name="login_text">Login</string>
    <string name="remember_me">Recordar mis Datos</string>
    <string name="hint_user">User</string>
    <string name="hint_password">Password</string>
    <string name="icon_clock">Clock Icon</string>
</resources>
