<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_background"
    tools:context="com.example.paolatilve.myturn.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ly_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ly_tittle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="top|center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivTittle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal|clip_horizontal|start"
                    android:layout_weight="1"
                    android:contentDescription="@string/icon_clock"
                    android:foregroundGravity="left"
                    app:srcCompat="@mipmap/clock" />

                <TextView
                    android:id="@+id/tvTittle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="2"
                    android:gravity="center_vertical|start"
                    android:text="@string/login_title"
                    android:textColor="#CCCCCC"
                    android:textSize="36sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:gravity="top"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/hint_user"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textSize="40sp" />

                <EditText
                    android:id="@+id/pwPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyRemeber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteY="160dp">

                <CheckBox
                    android:id="@+id/cbRemeber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:buttonTint="#CCCCCC"
                    android:text="@string/remember_me"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#FF6633"
                    android:text="@string/login_text"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>

